# CrispTTS

./: .gitignore  PLAN.md  cache.py  chunking.py  config.py  convert_f5_to_mlx.py  decoder.py  env-snapshot-current.txt  env-snapshot-kartoffelbox.txt  env-snapshot-old.txt  f5-test.py  f5_debug.py  main.py  pyproject.toml  readme.md  requirements.txt  requirements_current_working_state.txt  requirements_current_working_state_for_kartoffelbox.txt  server.py  ssml.py  utils.py  watermark.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
handlers/: __init__.py  chatterbox_handler.py  coqui_tts_handler.py  crispasr_handler.py  edge_handler.py  f5_tts_handler.py  kartoffel.py  kokoro_onnx_handler.py  llasa_german_transformers_handler.py  llasa_hf_transformers_handler.py  llasa_hybrid_handler.py  llasa_multilingual_transformers_handler.py  mlx_audio_handler.py  nemo_handler.py  orpheus_api_handler.py  orpheus_gguf_handler.py  outetts_handler.py  piper_handler.py  speecht5_handler.py  tts_cpp_handler.py  zonos_handler.py
tests/: test_cache.py  test_cli.py  test_config.py  test_features.py  test_handlers.py  test_server.py  test_ssml.py  test_utils.py  test_watermark.py
