[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisptts"
version = "0.2.0"
description = "Modular German Text-to-Speech synthesizer with 28+ TTS engines"
readme = "readme.md"
license = "EUPL-1.2"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "bandit>=1.7.5",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
edge = ["edge-tts>=6.1.0"]
piper = ["piper-tts>=1.2.0"]
ml = [
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.46.0",
    "soundfile>=0.12.0",
]
text-extraction = [
    "pypdfium2>=4.0.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",
]

[project.scripts]
crisptts = "main:main_cli_entrypoint"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S108"]  # assert + /tmp paths are fine in tests

[tool.bandit]
skips = ["B101"]  # assert used in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
