[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisptts"
version = "0.4.0"
description = "Modular German Text-to-Speech synthesizer with 28+ TTS engines"
readme = "readme.md"
license = "EUPL-1.2"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
    "numpy>=1.26.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "bandit>=1.7.5",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
edge = ["edge-tts>=6.1.0"]
piper = ["piper-tts>=1.2.0"]
ml = [
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.46.0",
    "soundfile>=0.12.0",
]
watermark = [
    "audioseal>=0.2.0",
]
watermark-mit = [
    "wavmark>=0.3.0",
]
metadata = [
    "mutagen>=1.47.0",
]
provenance = [
    "c2pa-python>=0.6.0",
]
text-extraction = [
    "pypdfium2>=4.0.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",
]

[project.scripts]
crisptts = "main:main_cli_entrypoint"

# Flat layout: package the handlers package plus the core top-level modules.
# Explicit discovery prevents setuptools from tripping over tests/ and local
# scratch dirs (e.g. tts_test_outputs/) during the build.
[tool.setuptools]
py-modules = ["main", "config", "utils", "decoder", "watermark", "chunking", "server"]

[tool.setuptools.packages.find]
include = ["handlers*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S108", "S603"]  # assert + /tmp paths + subprocess in tests

[tool.bandit]
skips = ["B101"]  # assert used in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
